[gd_scene load_steps=16 format=4 uid="uid://cm5hwabptuu71"]

[ext_resource type="Script" uid="uid://cpkxkxr282vum" path="res://till.gd" id="1_boe84"]
[ext_resource type="Script" uid="uid://wkacb30c066i" path="res://scan_area.gd" id="1_qu0lk"]
[ext_resource type="Script" uid="uid://yjxfa2jskju8" path="res://storage_area.gd" id="2_jdtb2"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_qhqmg"]
resource_name = "Steel"
cull_mode = 2
albedo_color = Color(0.906332, 0.906332, 0.906332, 1)
metallic = 0.75
roughness = 0.5

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_x5fvs"]
resource_name = "Plastic"
cull_mode = 2
albedo_color = Color(0.513724, 0.486275, 0.905883, 1)

[sub_resource type="ArrayMesh" id="ArrayMesh_c71v1"]
_surfaces = [{
"aabb": AABB(-0.5, 0.1, -0.9, 0.5, 0.4, 1.4),
"format": 34896613377,
"index_count": 12,
"index_data": PackedByteArray("AAABAAIAAAADAAEABAAFAAYABAAHAAUA"),
"name": "Steel",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 8,
"vertex_data": PackedByteArray("/////0iSAAAAAP////8AAAAA//9IkgAA////////AAAAAAAASJIAAP//AAAAAAAA//8AAEiSAAAAAAAAAAAAAA==")
}, {
"aabb": AABB(-0.5, -0.5, -0.9, 0.5, 1, 1.4),
"format": 34359742465,
"index_count": 54,
"index_data": PackedByteArray("AAABAAIAAwAAAAIAAwACAAQAAAAFAAEABQAAAAMABgADAAQABQADAAYABgAEAAcAAQAIAAcAAQAJAAgACgAGAAgACwAJAAUACgAMAAYADAAKAAsABgAMAA0ADAALAA0ABgANAAUACwAFAA0A"),
"name": "Plastic",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 14,
"vertex_data": PackedByteArray("AAAAvwAAAL8AAAA/AAAAvwAAAD/MzMy9AAAAvwAAAD8AAAA/AAAAAAAAAL8AAAA/AAAAAAAAAD8AAAA/AAAAvwAAAL/MzMy9AAAAAAAAAL/MzMy9AAAAAAAAAD/MzMy9AAAAAMzMzD3MzMy9AAAAv8zMzD3MzMy9AAAAAMzMzD1mZma/AAAAv8zMzD1mZma/AAAAAAAAAL9mZma/AAAAvwAAAL9mZma/")
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_boe84"]
resource_name = "till_Cube_001"
_surfaces = [{
"aabb": AABB(-0.5, 0.1, -0.9, 0.5, 0.4, 1.4),
"attribute_data": PackedByteArray("/5//f//f/z//3/9//5//P//f/3//n/9//5//f//f/38="),
"format": 34896613399,
"index_count": 12,
"index_data": PackedByteArray("AAABAAIAAAADAAEABAAFAAYABAAHAAUA"),
"material": SubResource("StandardMaterial3D_qhqmg"),
"name": "Steel",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 8,
"vertex_data": PackedByteArray("/////0iS//8AAP///////wAA//9Ikv////////////8AAAAASJL/P///AAAAAP8///8AAEiS/z8AAAAAAAD/P/9//7//f/+//3//v/9//7////9/////f////3////9/")
}, {
"aabb": AABB(-0.5, -0.5, -0.9, 0.5, 1, 1.4),
"attribute_data": PackedByteArray("AADAPgAAgD8AACA/AABAPwAAID8AAIA/AADAPgAAQD8AAGA/AAAAPwAAAD4AAAA/AAAAPgAAAD8AAGA/AAAAPwAAwD4AAAA/AAAgPwAAgD4AACA/AAAAPwAAwD4AAIA+AADAPgAAgD4AACA/AAAAAAAAID8AAIA+AADAPgAAAAAAAAA+AAAAPwAAwD4AAIA+AADAPgAAAD8AAAA+AACAPgAAAD4AAAA/AADAPgAAAD8AAMA+AAAAPwAAYD8AAAA/AAAAPgAAAD8AACA/AAAAPwAAYD8AAAA/AAAgPwAAAD8AACA/AAAAPwAAYD8AAAA/AAAgPwAAAD8AAMA+AAAAPwAAID8AAAA/AADAPgAAAD8="),
"format": 34359742487,
"index_count": 54,
"index_data": PackedByteArray("AAABAAIAAAADAAEABAAFAAYABAAHAAUACAAJAAoACAALAAkADAANAA4ADAAPAA0AEAARABIAEAATABEAEgAUABAAEgAVABQAFgAXABgAFgAZABcAGgAbABwAGgAdABsAHgAfACAAHgAhAB8A"),
"material": SubResource("StandardMaterial3D_x5fvs"),
"name": "Plastic",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 34,
"vertex_data": PackedByteArray("AAAAvwAAAL8AAAA/AAAAvwAAAD/MzMy9AAAAvwAAAD8AAAA/AAAAvwAAAL/MzMy9AAAAv8zMzD1mZma/AAAAvwAAAL/MzMy9AAAAvwAAAL9mZma/AAAAv8zMzD3MzMy9AAAAAAAAAL/MzMy9AAAAAAAAAD8AAAA/AAAAAAAAAD/MzMy9AAAAAAAAAL8AAAA/AAAAAAAAAL8AAAA/AAAAvwAAAD8AAAA/AAAAAAAAAD8AAAA/AAAAvwAAAL8AAAA/AAAAvwAAAL/MzMy9AAAAAAAAAL8AAAA/AAAAAAAAAL/MzMy9AAAAvwAAAL8AAAA/AAAAvwAAAL9mZma/AAAAAAAAAL9mZma/AAAAAAAAAL9mZma/AAAAv8zMzD1mZma/AAAAvwAAAL9mZma/AAAAAMzMzD1mZma/AAAAvwAAAD/MzMy9AAAAAMzMzD3MzMy9AAAAAAAAAD/MzMy9AAAAv8zMzD3MzMy9AAAAAMzMzD1mZma/AAAAAAAAAL/MzMy9AAAAAMzMzD3MzMy9AAAAAAAAAL9mZma/AAD/f/9///8AAP9//3///wAA/3//f///AAD/f/9///8AAP9/////vwAA/3////+/AAD/f////78AAP9/////v////3//f///////f/9///////9//3///////3//f////3//f/9/////f/9//3////9//3//f////3//f/9/////fwAA////v/9/AAD///+//38AAP///7//fwAA////v/9/AAD///8//38AAP///z//////////P/////////8//////////z//////////P/////////8//////////z//////////P/////////8/////f////7////9/////v////3////+/////f////78=")
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_c71v1")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_424v3"]
resource_name = "Screen_Plastic"
cull_mode = 2
albedo_color = Color(0.513724, 0.486275, 0.905883, 1)
roughness = 0.5

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_mxw88"]
resource_name = "Screen"
cull_mode = 2
metallic = 0.5
roughness = 0.5

[sub_resource type="ArrayMesh" id="ArrayMesh_u3iy4"]
_surfaces = [{
"aabb": AABB(-0.0517639, -0.05, -0.25, 0.151824, 0.656126, 0.5),
"format": 34359742465,
"index_count": 294,
"index_data": PackedByteArray("AAAgAAIAAAADACAAAwAAAAQABAAAAAIAAwAEAAUABQAEAAYABAACAAYAAwAFAAEAAwABACAABQAGAAEAIAAKAAIACQACAAoAIQACAAkAIgACACEACQAiACEAAgAiAAYACgALAAkACwAiAAkAIAAjAAoABgAiAAcAIAANACMAIwAkAAoACgAkAAsADwAjAA0AIAAlAA0AJQAPAA0AAQAlACAAIwAmACQAJgAjAA8AJwAkACYAKAAmAA8AJwAmACgAKAAZACcAJwAZABoAKAAYABkAEwAkACcAJwAaABMAEwALACQAEwAaABsAEgAYACgAKAAPABIAEgAXABgAEwAbACkAKQALABMAKQAbABwAKQAqAAsAIgALACoAKQAcACsAKwAqACkAKwAcAB0AIgAqACwAKwAsACoAIgAsAAwAKwAdABAAEAAsACsAEAAMACwAEAAdAB4AIgAMAAcAEAAeAC0ALQAMABAALQAeAB8ADAAuAAcABgAHAC4ALQAvAAwALwAuAAwALQAfADAAMAAvAC0AMAAfABUAMQAuAC8AMAAxAC8ABgAuADIALgAxADIABgAyAAEAMAAVABEAEQAxADAAEQAVABQAMgAxAA4AEQAOADEACAABADIAMgAOAAgAMwABAAgADgAzAAgAJQABADMAEQAUADQANAAOABEANAAUABYANQAzAA4ANAA1AA4AMwA2ACUAMwA1ADYAJQA2AA8AEgAPADYANAAWADcANwA1ADQANwA2ADUAEgA2ADcANwAWABcANwAXABIA"),
"lods": [0.0232284, PackedByteArray("AAABAAIAAAADAAEAAwAAAAQABAAAAAIAAwAEAAUAAwAFAAEABQAEAAYABAACAAYABQAGAAEAAgAHAAYABgAIAAEABgAHAAgABwACAAkAAQAKAAIACQACAAoACwAHAAkACgALAAkADAAIAAcABwALAAwADQABAAgAAQANAAoACAAMAA4ACAAOAA0ADwAKAA0ACgAPAAsADQAOAA8AEAAMAAsAEQAOAAwAEQAMABAAEgAPAA4AEgAOABEAEwALAA8AEwAPABIAEAALABMAEQAUABIAEQAVABQAEAAVABEAEgAUABYAEgAWABcAEgAXABgAEgAYABkAEgAZABMAEwAZABoAEwAaABsAEwAbABwAEwAcABAAEAAcAB0AEAAdAB4AEAAeAB8AEAAfABUA")],
"name": "Screen_Plastic",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 56,
"vertex_data": PackedByteArray("zcxMvc3MTL3NzEw9LAZUPIMStD7NzEy9bAZUvBiH5T7NzEw9zcxMvc3MTL3NzEy9zcxMPc3MTL3NzEw9zcxMPc3MTL3NzEy9LAZUPIMStD7NzEw9RgZUPUbHUz4AAIA+RgZUPUbHUz4AAIC+VgZUvfzaFz8AAIA+VgZUvfzaFz/NzEw9AEBjuxUrGz8AAIA+TuzMPaoHYT4AAIA+VgZUvfzaFz8AAIC+TuzMPaoHYT4AAIC+AEBjuxUrGz8AAIC+6au/PfTBeT5mZmY+6au/PfTBeT5mZma+msxEO4L8FD9mZma+msxEO4L8FD9mZmY+Lns/Pdm1uD5mZma+kP+hPTzIdT5mZma+EPCqPG4q6j5mZma+pi88vBT+Ez9mZma+pC88vBT+Ez/NzEy9pC88vBT+Ez/NzEw9pi88vBT+Ez9mZmY+EPCqPG4q6j5mZmY+Lns/Pdm1uD5mZmY+kP+hPTzIdT5mZmY+kP+hPT3IdT7NzEw9kP+hPT3IdT7NzEy9bAZUvBiH5T7NzEy9bAZUvBiH5T4AAIA+LAZUPIMStD4AAIA+VgZUvfzaFz/NzEy9AEBjuxUrGz/NzEw9bAZUvBiH5T4AAIC+AEBjuxUrGz/NzEy9nsxEO4L8FD/NzEw9nsxEO4L8FD/NzEy9u9AQPUon7D5mZmY+u9AQPUon7D4AAIA+4dN6PbWyuj5mZmY+4dN6PbWyuj4AAIA+6au/PfXBeT7NzEw9RgZUPUbHUz7NzEw9TuzMPaoHYT7NzEw96au/PfXBeT7NzEy9TuzMPaoHYT7NzEy9RgZUPUbHUz7NzEy9LAZUPIMStD4AAIC+4dN6PbWyuj5mZma+4dN6PbWyuj4AAIC+u9AQPUon7D4AAIC+u9AQPUon7D5mZma+")
}, {
"aabb": AABB(-0.011486, 0.240022, -0.225, 0.0905867, 0.338074, 0.45),
"format": 34896613377,
"index_count": 30,
"index_data": PackedByteArray("AAABAAIAAAADAAEABAADAAAAAwAFAAYAAwAHAAUABAAHAAMABAAIAAcABwAIAAkACAAEAAoACgAEAAsA"),
"name": "Screen",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 12,
"vertex_data": PackedByteArray("bVuRpAAAAAAAAP//jWMAAAAA//8AAAAAAAD//3GcAACRpG1bAAAAAG1bkaT//wAAAAD/////AACRpG1b//8AAP//AABxnAAA//8AAP//AAD//wAAjWMAAP//AAAAAAAA")
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_fbq1i"]
resource_name = "till_Cube_002"
_surfaces = [{
"aabb": AABB(-0.0517639, -0.05, -0.25, 0.151824, 0.656126, 0.5),
"attribute_data": PackedByteArray("AADAPgAAgD8AACA/AAAAPwAAID8AAIA/AADAPgAAQD8AACA/AACAPwAAID8AAEA/AAAgPwAAAD8AACA/AACAPgAAID8AAIA+AAAgPwAAAAAAACA/AAAAAAAAID8AAAAAAADAPgAAQD8AAMA+AAAAPwAAID8AAAA/AADAPgAAAD8AACA/AACAPgAAID8AAAA/AADAPgAAgD4AAMA+AACAPgAAID8AAAAAAAAgPwAAgD4AAMA+AAAAAAAAAD4AAAA/AADAPgAAgD4AAMA+AAAAPwAAAD4AAIA+AAAgPwAAAD8AACA/AACAPgAAID8AAAA/AAAgPwAAgD4AACA/AACAPwAAID8AAIA/AAAgPwAAgD8AACA/AABAPwAAID8AAEA/AAAgPwAAgD4AACA/AAAAAAAAID8AAIA+AAAgPwAAAAAAACA/AABAPwAAID8AAAA/AAAgPwAAQD8AACA/AAAAPwuKXj9SJII+YzQpP0qghD72dSE/UiSCPvZ1IT9SJII+m8tWP0ighD4Lil4/UiSCPguKXj9SJII+AABgPwAAAD8Kil4/rtv9PgAAID8AAAA/AABgPwAAgD74dSE/qtv9PvZ1IT9SJII+AAAgPwAAgD4Kil4/rtv9PgqKXj+u2/0+/HNcP8jV7T77c1w/OCqSPguKXj9SJII+C4peP1Ikgj74dSE/qtv9PmA0KT+6X/s+CopeP67b/T74dSE/qtv9PpzLVj+6X/s+CopeP67b/T72dSE/UiSCPvZ1IT9SJII+A4wjPzgqkj4EjCM/yNXtPvh1IT+q2/0++HUhP6rb/T4AACA/AABAPwAAID8AAIA/AAAgPwAAQD8AACA/AAAAPwAAID8AAAA/AAAgPwAAgD4AACA/AACAPgAAID8AAEA/AAAgPwAAQD8AACA/AABAPwAAID8AAAA/AAAgPwAAAD8AACA/AACAPgAAID8AAIA+AAAgPwAAAAAAACA/AACAPwAAID8AAEA/AAAgPwAAQD8AACA/AACAPgAAID8AAAAAAAAgPwAAAAAAACA/AACAPgAAID8AAEA/AAAgPwAAQD8AACA/AAAAPwAAID8AAAA/m8tWP0ighD5jNCk/SqCEPvtzXD84KpI+AABgPwAAAD/8c1w/yNXtPgAAYD8AAIA+AABgPwAAAD+cy1Y/ul/7PpvLVj9IoIQ+AAAgPwAAAD8AAGA/AACAPmA0KT+6X/s+YzQpP0qghD4AACA/AACAPgAAID8AAAA/BIwjP8jV7T4DjCM/OCqSPgAAID8AAIA+/HNcP8jV7T77c1w/OCqSPmA0KT+6X/s+nMtWP7pf+z4DjCM/OCqSPgSMIz/I1e0+"),
"format": 34359742487,
"index_count": 294,
"index_data": PackedByteArray("AABMAE0AAAADAEwADAAOAE4ADAANAA4ADwAQABEADwASABAAEwAUABUAEwAWABQAFwAYABkAFwAaABgATwAdABsATwBQAB0AUQBQAE8AUABRAFIAUgBRABwAHABRAB4AUwAEAAIAUwBUAAQAUwAFAFQAUwBVAAUAAQBVAFMAVQABAFYAVgABAAYABgABAFcABwBXAAEABwBYAFcABwAIAFgABwBZAAgACQBZAAcAWQAJAFoAWgAJAAoACgAJAAsAHwAgACEAHwBbACAAXABbAB8AXABdAFsAXQBcACIAIgBcACMAJwBeAF8AJQBeACcAXgAlAGAAXgBgAGEAXgBhACYAXgAmACQAYgAqACgAYgBjACoAZABjAGIAZABlAGMAZQBkACkAKQBkACsAZgAtAGcAZwAtAC8AZwAvAC4AZgAwAC0ALAAwAGYALAAxADAAaABpAGoAagBpADMAaABrAGkAagAzADQAMgBrAGgANAAzAGwAMgA2AGsANABsAG0AbgA2ADIAbQBsAG8AbgBwADYAbQBvAHEAcgBwAG4AcQBvADUAcgBzAHAAcQA1ADcAOABzAHIANwA1AHQAOAA5AHMANwB0AHUAdgA5ADgAdQB0AHcAdgB3ADkAdQB3AHYAOgA8AHgAOgA7ADwAeAA8AD0AeAA9AHkAeQA9AD8AeQA/AD4AQABBAHoAQABDAEEAegBBAEQAegBEAHsAewBEAEUAewBFAEIARgBIAHwARgBHAEgAfABIAEkAfABJAH0AfQBJAEoAfQBKAEsA"),
"lods": [0.0232284, PackedByteArray("AAABAAIAAAADAAEAAQAEAAIAAQAFAAQABQABAAYABwAGAAEABwAIAAYACQAIAAcACAAJAAoACgAJAAsADAANAA4ADwAQABEADwASABAAEwAUABUAEwAWABQAFwAYABkAFwAaABgAGwAcAB0AHAAbAB4AHwAgACEAHwAiACAAIgAfACMAJAAlACYAJQAkACcAKAApACoAKwApACgALAAtAC4ALgAtAC8ALAAwAC0ALAAxADAAMgAzADQANAAzADUAMgA2ADMANAA1ADcAOAA2ADIANwA1ADkAOAA5ADYANwA5ADgAOgA7ADwAOgA8AD0AOgA9AD4APgA9AD8AQABBAEIAQABDAEEAQgBBAEQAQgBEAEUARgBHAEgARgBIAEkARgBJAEoARgBKAEsA")],
"material": SubResource("StandardMaterial3D_424v3"),
"name": "Screen_Plastic",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 126,
"vertex_data": PackedByteArray("zcxMvc3MTL3NzEw9LAZUPIMStD7NzEy9bAZUvBiH5T7NzEw9zcxMvc3MTL3NzEy9VgZUvfzaFz/NzEw9VgZUvfzaFz8AAIC+RgZUPUbHUz4AAIC+LAZUPIMStD7NzEw9RgZUPUbHUz4AAIA+bAZUvBiH5T7NzEw9VgZUvfzaFz8AAIA+VgZUvfzaFz/NzEw9zcxMvc3MTL3NzEy9zcxMPc3MTL3NzEy9LAZUPIMStD7NzEy9zcxMPc3MTL3NzEy9LAZUPIMStD7NzEw9LAZUPIMStD7NzEy9zcxMPc3MTL3NzEw9zcxMPc3MTL3NzEw9bAZUvBiH5T7NzEw9LAZUPIMStD7NzEw9zcxMvc3MTL3NzEw9zcxMvc3MTL3NzEy9zcxMPc3MTL3NzEw9zcxMPc3MTL3NzEy9zcxMvc3MTL3NzEw9RgZUPUbHUz4AAIC+TuzMPaoHYT4AAIA+TuzMPaoHYT4AAIC+RgZUPUbHUz4AAIA+VgZUvfzaFz/NzEw9AEBjuxUrGz8AAIA+VgZUvfzaFz8AAIA+AEBjuxUrGz8AAIC+VgZUvfzaFz8AAIC+RgZUPUbHUz4AAIA+AEBjuxUrGz8AAIA+TuzMPaoHYT4AAIA+VgZUvfzaFz8AAIA+VgZUvfzaFz8AAIC+TuzMPaoHYT4AAIC+AEBjuxUrGz8AAIC+RgZUPUbHUz4AAIC+msxEO4L8FD9mZmY+Lns/Pdm1uD5mZmY+6au/PfTBeT5mZmY+kP+hPTzIdT5mZmY+EPCqPG4q6j5mZmY+pi88vBT+Ez9mZmY+msxEO4L8FD9mZmY+AEBjuxUrGz8AAIC+msxEO4L8FD9mZma+TuzMPaoHYT4AAIC+AEBjuxUrGz8AAIA+6au/PfTBeT5mZma+6au/PfTBeT5mZmY+TuzMPaoHYT4AAIA+msxEO4L8FD9mZma+pi88vBT+Ez9mZma+pC88vBT+Ez/NzEy9pC88vBT+Ez/NzEw9msxEO4L8FD9mZmY+pi88vBT+Ez9mZmY+6au/PfTBeT5mZma+Lns/Pdm1uD5mZma+msxEO4L8FD9mZma+kP+hPTzIdT5mZma+EPCqPG4q6j5mZma+pi88vBT+Ez9mZma+6au/PfTBeT5mZmY+kP+hPTzIdT5mZmY+kP+hPT3IdT7NzEw9kP+hPT3IdT7NzEy9kP+hPTzIdT5mZma+6au/PfTBeT5mZma+bAZUvBiH5T7NzEy9bAZUvBiH5T7NzEw9bAZUvBiH5T7NzEy9RgZUPUbHUz7NzEy9TuzMPaoHYT7NzEy9RgZUPUbHUz7NzEw9TuzMPaoHYT7NzEw9bAZUvBiH5T7NzEy9VgZUvfzaFz/NzEy9bAZUvBiH5T4AAIC+LAZUPIMStD4AAIC+RgZUPUbHUz7NzEy9RgZUPUbHUz7NzEw9LAZUPIMStD4AAIA+bAZUvBiH5T4AAIA+AEBjuxUrGz/NzEw9VgZUvfzaFz/NzEy9AEBjuxUrGz/NzEy9LAZUPIMStD4AAIA+bAZUvBiH5T4AAIA+u9AQPUon7D4AAIA+4dN6PbWyuj4AAIA+bAZUvBiH5T4AAIC+u9AQPUon7D4AAIC+LAZUPIMStD4AAIC+4dN6PbWyuj4AAIC+u9AQPUon7D5mZmY+4dN6PbWyuj5mZmY+nsxEO4L8FD/NzEw9AEBjuxUrGz/NzEy9nsxEO4L8FD/NzEy9AEBjuxUrGz/NzEw9u9AQPUon7D4AAIC+u9AQPUon7D5mZma+u9AQPUon7D5mZmY+4dN6PbWyuj4AAIC+u9AQPUon7D4AAIA+4dN6PbWyuj5mZma+4dN6PbWyuj5mZmY+4dN6PbWyuj4AAIA+TuzMPaoHYT7NzEy96au/PfXBeT7NzEy96au/PfXBeT7NzEw9TuzMPaoHYT7NzEw9nsxEO4L8FD/NzEy9nsxEO4L8FD/NzEw94dN6PbWyuj5mZma+u9AQPUon7D5mZma+6au/PfXBeT7NzEw96au/PfXBeT7NzEy93QjciNyIkPsMG/Nk////vwwb82T///+/3QjciNyIkPsMG/Nk////vwwb82T///+/DBvzZP///78MG/Nk////vwwb82T///+/DBvzZP///78MG/Nk////vwwb82T///+//////yp2FPv/////L3WX+v////9Nh1j8LvXQii51lvou9dCKLnWW+i710IoudZb6LvXQii51lvr/f/9/b4jG+/9//3/ggI7//3//fy91l/r/f/9/24iQ+/9/AAD///+//38AAP///7//fwAA////v/9/AAD///+/C5sMG////78Lmwwb////vwubDBv///+/C5sMG////7/zZPLk////v/Nk8uT///+/82Ty5P///7/zZPLk////v/Nk8uT///+//3//f////z//f/9/////P/9//3////8//3//f////z//////////v/////////+//////////7//////////v/////////+//////////7//////////v/////////+//////////7//////////v/LkC5vwTY718uQLm+pfJfPy5Aub6WAD8/LkC5v7UCX18uQLm/pQJfXy5Aub8E2N9fLkC5vpYAPz8uQLm+pfJfMLmwwb////vwubDBv///+/C5sMG////78Lmwwb////vwubDBv///+/C5sMG////7//f/9/////P/9//3////8//3//f////z//f/9/////P/9//3////8//3//f////z/zZPLk////v/Nk8uT///+/82Ty5P///7/zZPLk////v/Nk8uT///+/82Ty5P///7/dCNyI3IiQ+90I3IjciJD7/////9uIkPsLmwwb////vwubDBv///+/C5sMG////78Lmwwb////vwwb82T///+/DBvzZP///78MG/Nk////vwwb82T///+/DBvzZP///78MG/Nk////vwwb82T///+/DBvzZP///7/zZPLk////v/Nk8uT///+/82Ty5P///7//f/9/////P/9//3////8//3//f////z//f/9/////P/////////+//////////7//////////v/////////+//////////7//////////v/LkC5tDMIf58uQLm3JtnOLy5Aub6W7h3/LkC5vALrv58uQLmwJmfvDy5AubFWZb8PLkC5u5YsXy8uQLm/NkePLy5Aub82R48vLkC5u5YsXy8uQLmxVmW/Dy5AubAmZ+8PLkC5vALrv58uQLm0Mwh/ny5Aub6W7h3/LkC5tybZziC5sMG////78Lmwwb////v/9//3////8//3//f////z/zZPLk////v/Nk8uT///+/")
}, {
"aabb": AABB(-0.011486, 0.240022, -0.225, 0.0905867, 0.338074, 0.45),
"attribute_data": PackedByteArray("ytavfXPc6naJ3u1+c9wUSTOpr33K1k9Cid4RQTOpT0KLoxRJdaERQYuj6nZ1oe1+"),
"format": 34896613399,
"index_count": 30,
"index_data": PackedByteArray("AAABAAIAAAADAAEABAADAAAAAwAFAAYAAwAHAAUABAAHAAMABAAIAAcABwAIAAkACAAEAAoACgAEAAsA"),
"material": SubResource("StandardMaterial3D_mxw88"),
"name": "Screen",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 12,
"vertex_data": PackedByteArray("bVuRpAAAtN4AAP//jWPA8AAA//8AAEXhAAD//3Gc+9aRpG1bAABh2G1bkaT//xzaAAD/////eNaRpG1b//+I3f//AABxnNfo//8AAP//ReH//wAAjWNzyv//AAAAAHjWSStjJaUbZy/cKPEmeTMmINwxLiH1L2YiFDTCH28spyQyIjYr3CjxJlBHcRMUNMIf")
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_u3iy4")

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_lfijq"]
data = PackedVector3Array(-0.5, -0.5, 0.5, -0.5, 0.5, -0.1, -0.5, 0.5, 0.5, -0.5, -0.5, 0.5, -0.5, -0.5, -0.1, -0.5, 0.5, -0.1, -0.5, 0.1, -0.9, -0.5, -0.5, -0.1, -0.5, -0.5, -0.9, -0.5, 0.1, -0.9, -0.5, 0.1, -0.1, -0.5, -0.5, -0.1, 0, -0.5, -0.1, 0, 0.5, 0.5, 0, 0.5, -0.1, 0, -0.5, -0.1, 0, -0.5, 0.5, 0, 0.5, 0.5, 0, -0.5, 0.5, -0.5, 0.5, 0.5, 0, 0.5, 0.5, 0, -0.5, 0.5, -0.5, -0.5, 0.5, -0.5, 0.5, 0.5, -0.5, -0.5, -0.1, 0, -0.5, 0.5, 0, -0.5, -0.1, -0.5, -0.5, -0.1, -0.5, -0.5, 0.5, 0, -0.5, 0.5, 0, 0.5, -0.1, -0.5, 0.5, 0.5, -0.5, 0.5, -0.1, 0, 0.5, -0.1, 0, 0.5, 0.5, -0.5, 0.5, 0.5, 0, -0.5, -0.9, -0.5, 0.1, -0.9, -0.5, -0.5, -0.9, 0, -0.5, -0.9, 0, 0.1, -0.9, -0.5, 0.1, -0.9, 0, -0.5, -0.1, -0.5, -0.5, -0.9, -0.5, -0.5, -0.1, 0, -0.5, -0.1, 0, -0.5, -0.9, -0.5, -0.5, -0.9, -0.5, 0.1, -0.1, 0, 0.1, -0.9, 0, 0.1, -0.1, -0.5, 0.1, -0.1, -0.5, 0.1, -0.9, 0, 0.1, -0.9, -0.5, 0.5, -0.1, 0, 0.1, -0.1, 0, 0.5, -0.1, -0.5, 0.5, -0.1, -0.5, 0.1, -0.1, 0, 0.1, -0.1, 0, 0.1, -0.9, 0, -0.5, -0.1, 0, 0.1, -0.1, 0, 0.1, -0.9, 0, -0.5, -0.9, 0, -0.5, -0.1)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_s44mk"]
data = PackedVector3Array(-0.25, -0.25, 0.25, -0.25, 0.41, -0.25, -0.25, 0.41, 0.25, -0.25, -0.25, 0.25, -0.25, -0.25, -0.25, -0.25, 0.41, -0.25, -0.25, -0.25, -0.25, -0.08, 0.41, -0.25, -0.25, 0.41, -0.25, -0.25, -0.25, -0.25, -0.08, -0.25, -0.25, -0.08, 0.41, -0.25, -0.08, -0.25, -0.25, -0.08, 0.41, 0.25, -0.08, 0.41, -0.25, -0.08, -0.25, -0.25, -0.08, -0.25, 0.25, -0.08, 0.41, 0.25, -0.08, -0.25, 0.25, -0.25, 0.41, 0.25, -0.08, 0.41, 0.25, -0.08, -0.25, 0.25, -0.25, -0.25, 0.25, -0.25, 0.41, 0.25, -0.25, -0.25, -0.25, -0.08, -0.25, 0.25, -0.08, -0.25, -0.25, -0.25, -0.25, -0.25, -0.25, -0.25, 0.25, -0.08, -0.25, 0.25, -0.08, 0.41, -0.25, -0.25, 0.41, 0.25, -0.25, 0.41, -0.25, -0.08, 0.41, -0.25, -0.08, 0.41, 0.25, -0.25, 0.41, 0.25)

[sub_resource type="BoxShape3D" id="BoxShape3D_ts6mt"]
size = Vector3(0.5, 0.7, 0.6)

[sub_resource type="BoxShape3D" id="BoxShape3D_qu0lk"]
size = Vector3(0.6, 1.2, 1.5)

[node name="till" type="Node3D"]
script = ExtResource("1_boe84")

[node name="Till" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, -0.2)
mesh = SubResource("ArrayMesh_boe84")
skeleton = NodePath("")

[node name="Screen" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.45, 1.05, 0)
mesh = SubResource("ArrayMesh_fbq1i")
skeleton = NodePath("")

[node name="_StaticBody3D_117610" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, -0.2)

[node name="CollisionShape3D" type="CollisionShape3D" parent="_StaticBody3D_117610"]
shape = SubResource("ConcavePolygonShape3D_lfijq")

[node name="_StaticBody3D_117611" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.25, 1.25, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="_StaticBody3D_117611"]
shape = SubResource("ConcavePolygonShape3D_s44mk")

[node name="scan_area" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.35, 0)
collision_layer = 4
collision_mask = 196615
script = ExtResource("1_qu0lk")

[node name="CollisionShape3D" type="CollisionShape3D" parent="scan_area"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.25, 0, 0)
shape = SubResource("BoxShape3D_ts6mt")

[node name="storage_area" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.15, -0.4)
collision_layer = 4
collision_mask = 196615
script = ExtResource("2_jdtb2")

[node name="CollisionShape3D" type="CollisionShape3D" parent="storage_area"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.25, 0, 0)
shape = SubResource("BoxShape3D_qu0lk")

[node name="book_prices" type="Label3D" parent="."]
transform = Transform3D(-4.37114e-08, -0.258819, 0.965926, 0, 0.965926, 0.258819, -1, 1.13133e-08, -4.2222e-08, -0.455, 1.62, -0.2)
pixel_size = 0.0007
modulate = Color(0, 0, 0, 1)
text = "19.99
19.99
19.99
19.99"
outline_size = 0
horizontal_alignment = 2
vertical_alignment = 0

[node name="book_names" type="Label3D" parent="."]
transform = Transform3D(-4.37114e-08, -0.258819, 0.965926, 0, 0.965926, 0.258819, -1, 1.13133e-08, -4.2222e-08, -0.455, 1.62, 0.2)
pixel_size = 0.0007
modulate = Color(0, 0, 0, 1)
text = "My default book name 1
My default book name 2
My default book name 3
My default book name 4"
outline_size = 0
horizontal_alignment = 0
vertical_alignment = 0

[node name="book_total_price" type="Label3D" parent="."]
transform = Transform3D(-4.37114e-08, -0.258819, 0.965926, 0, 0.965926, 0.258819, -1, 1.13133e-08, -4.2222e-08, -0.371, 1.3, -0.2)
pixel_size = 0.001
modulate = Color(0, 0, 0, 1)
text = "Total : 100.00"
outline_size = 0
horizontal_alignment = 2
vertical_alignment = 2

[node name="baggage_area_alert" type="Label3D" parent="."]
transform = Transform3D(-4.37114e-08, -0.258819, 0.965926, 0, 0.965926, 0.258819, -1, 1.13133e-08, -4.2222e-08, -0.410577, 1.45, 0)
visible = false
pixel_size = 0.0025
modulate = Color(1, 1, 0, 1)
text = "Place item in baggage area"
autowrap_mode = 2
width = 200.0
